[metadata]
author = CJ Harries
author_email = cj@wizardsoftheweb.pro
license_file = LICENSE

[bdist_wheel]
universal = 1

[options]
install_requires =
    wotw-highlighter
    yaml
    pytest-runner
tests_require =
    mock
    coverage
    pytest
    pytest-cov

[tool:pytest]
addopts = -v -x --cov-report html --cov-report term --cov=wotw_blogger --color=yes

[aliases]
test=pytest
